building header and footer

--- a/5_portfolioFeatures.html
+++ b/5_portfolioFeatures.html
@@ -18,7 +18,7 @@
         <ul id="headNav">
           <li class="mainNavi logoPadding"><a href="1_index.html"><img src="" alt="Logo"><h3 class="hidden">Logo</h3></a></li>
           <li class="mainNavi"><a href="1_index.html"><h3>Index</h3></a></li>
-          <li class="mainNavi"><a href="#"><h3>About</h3></a></li>
+          <li class="mainNavi"><a href="2_about.html"><h3>About</h3></a></li>
           <li class="mainNavi"><a href="3_contact.html"><h3>Contact</h3></a></li>
           <li class="mainNavi"><a href="4_portfolio.html"><h3>Portfolio</h3></a></li>
           <div id="headSocial">
