--- a/5_portfolioFeatures.html
+++ b/5_portfolioFeatures.html
@@ -6,7 +6,6 @@
 <link rel="stylesheet" href="https://use.typekit.net/zwq2ock.css">
 <link href="css/reset.css" rel="stylesheet" type="text/css">
 <link href="css/main.css" rel="stylesheet" type="text/css">
-
 </head>
 <!--header start -->
 <body>
@@ -17,20 +16,21 @@
         <h2 class="hidden">Main Navigation</h2>
         <ul id="headNav">
           <li class="mainNavi logoPadding"><a href="1_index.html"><img src="" alt="Logo"><h3 class="hidden">Logo</h3></a></li>
-          <li class="mainNavi"><a href="1_index.html"><h3>Index</h3></a></li>
+          <li class="mainNavi"><a href="#"><h3>Index</h3></a></li>
           <li class="mainNavi"><a href="2_about.html"><h3>About</h3></a></li>
           <li class="mainNavi"><a href="3_contact.html"><h3>Contact</h3></a></li>
           <li class="mainNavi"><a href="4_portfolio.html"><h3>Portfolio</h3></a></li>
           <div id="headSocial">
-            <li class=""><a href="#"><img src="" alt="twitter logo"><h3 class="hidden">Twitter</h3></a></li>
-            <li class=""><a href="#"><img src="" alt="Instagram logo"><h3 class="hidden">Instagram</h3></a></li>
-            <li class=""><a href="#"><img src="" alt="Indeed logo"><h3 class="hidden">Indeed</h3></a></li>
+            <li class="socialImg"><a href="#"><img src="images/social_twitter.svg" alt="twitter logo"><h3 class="hidden">Twitter</h3></a></li>
+            <li class="socialImg"><a href="#"><img src="images/social_instagram.svg" alt="Instagram logo"><h3 class="hidden">Instagram</h3></a></li>
+            <li class="socialImg2"><a href="#"><img src="images/social_indeed.svg" alt="Indeed logo"><h3 class="hidden">Indeed</h3></a></li>
           </div>
           <li class="hidden"><a href="#"><img src="" alt="Hamburger Icon"><h3 class="hidden">Menu</h3></a></li>
         </ul>
       </nav>
     </header>
     <!-- header end -->
+
 
     <!-- hero start -->
     <div id="homeImg"><img src=""></div>
@@ -47,19 +47,21 @@
     <!-- section2 end -->
     </div>
 
-    <!-- footer start -->
-   <footer id="foot" class="footNav">
-    <div id="footLogo"><a href="1_index.html"><img src="" alt="Logo"><h3 class="hidden">Logo</h3></a></div>
-    <div id="footAddress">
-      <img>
-      <p>123 Street Street<br>
-      London, Ontario<br>
-      AB3 48I</p>
+   <!-- footer start -->
+   <footer id="foot">
+    <div class="footNav">
+      <div id="footLogo"><a href="1_index.html"><img src="" alt="Logo"><h3 class="hidden">Logo</h3></a></div>
+      <div id="footAddress">
+        <img src="images/location_logo.svg" alt="location logo">
+        <p>123 Street Street<br>
+        London, Ontario<br>
+        AB3 48I</p>
+      </div>
     </div>
     <ul id="footSocial">
-      <li class="socialM"><a href="#"><img src="" alt="facebook logo"><h3 class="hidden">Facebook</h3></a></li>
-      <li class="socialM"><a href="#"><img src="" alt="Instagram logo"><h3 class="hidden">Instagram</h3></a></li>
-      <li class=""><a href="#"><img src="" alt="Twitter logo"><h3 class="hidden">Twitter</h3></a></li>
+      <li class="socialImg"><a href="#"><img src="images/social_twitter.svg" alt="twitter logo"><h3 class="hidden">Twitter</h3></a></li>
+      <li class="socialImg"><a href="#"><img src="images/social_instagram.svg" alt="Instagram logo"><h3 class="hidden">Instagram</h3></a></li>
+      <li class="socialImg2"><a href="#"><img src="images/social_indeed.svg" alt="Indeed logo"><h3 class="hidden">Indeed</h3></a></li>
     </ul>
    </footer>
    <!-- footer end -->
