added my photo and the logo, now to add the JS

--- a/1_index.html
+++ b/1_index.html
@@ -15,7 +15,7 @@
       <nav id="head">
         <h2 class="hidden">Main Navigation</h2>
         <ul id="headNav">
-          <li class="mainNavi logoPadding"><a href="1_index.html"><img src="" alt="Logo"><h3 class="hidden">Logo</h3></a></li>
+          <li class="mainNavi logoPadding"><a href="1_index.html"><img class="logoImage" src="assets/apeiron_logo_SVG.svg" alt="Logo"><h3 class="hidden">Logo</h3></a></li>
           <li class="mainNavi"><a href="#"><h3>Index</h3></a></li>
           <li class="mainNavi"><a href="2_about.html"><h3>About</h3></a></li>
           <li class="mainNavi"><a href="3_contact.html"><h3>Contact</h3></a></li>
@@ -40,7 +40,7 @@
         <h2>Meet the team</h2>
         <div id="team">
           <div class="members">
-            <img src="">
+            <img src="images/evan.jpg">
             <h3>Evan Hansen</h3>
           </div>
           <div class="members">
