Added a button and some touchups

--- a/1_index.html
+++ b/1_index.html
@@ -37,23 +37,24 @@
     <div id="contents">
       <!--section 1 start -->
       <section id="teamIntro">
-        <h2>Meet the team</h2>
+        <h2>Meet The Team</h2>
+
         <div id="team">
           <div class="members">
             <img src="images/evan.jpg">
-            <h3>Evan Hansen</h3>
+            <button id="Evan">Evan Hansen</button>
           </div>
           <div class="members">
             <img src="">
-            <h3>Doyeon Kim</h3>
+            <button id="Doyeon">Doyeon Kim</button>
           </div>
           <div class="members">
             <img src="">
-            <h3>Carson Fitzgeorge</h3>
+            <button id="Carson">Carson Fitzgeorge</button>
           </div>
           <div class="members">
             <img src="">
-            <h3>Abram Kouwen</h3>
+            <button id="Abram">Abram Kouwen</button>
           </div>
         </div>
       </section>
