--- a/2_about.html
+++ b/2_about.html
@@ -15,7 +15,7 @@
       <nav id="head">
         <h2 class="hidden">Main Navigation</h2>
         <ul id="headNav">
-          <li class="mainNavi logoPadding"><a href="1_index.html"><img src="" alt="Logo"><h3 class="hidden">Logo</h3></a></li>
+          <li class="mainNavi logoPadding logoDesign"><a href="1_index.html"><img src="assets/apeiron_logo.svg" alt="Logo"><h3 class="hidden">Logo</h3></a></li>
           <li class="mainNavi"><a href="1_index.html"><h3>Index</h3></a></li>
           <li class="mainNavi"><a href="#"><h3>About</h3></a></li>
           <li class="mainNavi"><a href="3_contact.html"><h3>Contact</h3></a></li>
@@ -36,20 +36,38 @@
     <!-- hero end -->
     <div id="contents">
       <!--section 1 start -->
-    <section>
-    </section>
-    <!-- section1 end -->
-
-    <!-- section2 start -->
-    <section>
-    </section>
-    <!-- section2 end -->
+      <section id="introTeam">
+        <h2>Meet the team</h2>
+        <div id="teamMembers">
+          <div class="membersIntro">
+            <img src="">
+            <h3>Evan Hansen</h3>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+          </div>
+          <div class="membersIntro">
+            <img src="">
+            <h3>Doyeon Kim</h3>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+          </div>
+          <div class="membersIntro">
+            <img src="">
+            <h3>Carson Fitzgeorge</h3>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+          </div>
+          <div class="membersIntro">
+            <img src="">
+            <h3>Abram Kouwen</h3>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+          </div>
+        </div>
+      </section>
+      <!-- section1 end -->
     </div>
 
      <!-- footer start -->
    <footer id="foot">
     <div class="footNav">
-      <div id="footLogo"><a href="1_index.html"><img src="" alt="Logo"><h3 class="hidden">Logo</h3></a></div>
+      <div id="footLogo"><a href="1_index.html"><img src="assets/apeiron_logo.svg" alt="Logo"><h3 class="hidden">Logo</h3></a></div>
       <div id="footAddress">
         <img src="images/location_logo.svg" alt="location logo">
         <p>123 Street Street<br>
@@ -58,9 +76,9 @@
       </div>
     </div>
     <ul id="footSocial">
-      <li class="socialImg"><a href="#"><img src="images/social_twitter.svg" alt="twitter logo"><h3 class="hidden">Twitter</h3></a></li>
-      <li class="socialImg"><a href="#"><img src="images/social_instagram.svg" alt="Instagram logo"><h3 class="hidden">Instagram</h3></a></li>
-      <li class="socialImg2"><a href="#"><img src="images/social_indeed.svg" alt="Indeed logo"><h3 class="hidden">Indeed</h3></a></li>
+      <li class="footSocialImg"><a href="#"><img src="images/social_twitter.svg" alt="twitter logo"><h3 class="hidden">Twitter</h3></a></li>
+      <li class="footSocialImg"><a href="#"><img src="images/social_instagram.svg" alt="Instagram logo"><h3 class="hidden">Instagram</h3></a></li>
+      <li class="footSocialImg2"><a href="#"><img src="images/social_indeed.svg" alt="Indeed logo"><h3 class="hidden">Indeed</h3></a></li>
     </ul>
    </footer>
    <!-- footer end -->
@@ -68,3 +86,4 @@
   <script src=""></script>
   </body>
   </html>
+
