--- a/3_contact.html
+++ b/3_contact.html
@@ -15,7 +15,7 @@
       <nav id="head">
         <h2 class="hidden">Main Navigation</h2>
         <ul id="headNav">
-          <li class="mainNavi logoPadding"><a href="1_index.html"><img src="" alt="Logo"><h3 class="hidden">Logo</h3></a></li>
+          <li class="mainNavi logoPadding logoDesign"><a href="1_index.html"><img src="assets/apeiron_logo.svg" alt="Logo"><h3 class="hidden">Logo</h3></a></li>
           <li class="mainNavi"><a href="1_index.html"><h3>Index</h3></a></li>
           <li class="mainNavi"><a href="2_about.html"><h3>About</h3></a></li>
           <li class="mainNavi"><a href="#"><h3>Contact</h3></a></li>
@@ -50,7 +50,7 @@
     <!-- footer start -->
    <footer id="foot">
     <div class="footNav">
-      <div id="footLogo"><a href="1_index.html"><img src="" alt="Logo"><h3 class="hidden">Logo</h3></a></div>
+      <div id="footLogo"><a href="1_index.html"><img src="assets/apeiron_logo.svg" alt="Logo"><h3 class="hidden">Logo</h3></a></div>
       <div id="footAddress">
         <img src="images/location_logo.svg" alt="location logo">
         <p>123 Street Street<br>
@@ -59,9 +59,9 @@
       </div>
     </div>
     <ul id="footSocial">
-      <li class="socialImg"><a href="#"><img src="images/social_twitter.svg" alt="twitter logo"><h3 class="hidden">Twitter</h3></a></li>
-      <li class="socialImg"><a href="#"><img src="images/social_instagram.svg" alt="Instagram logo"><h3 class="hidden">Instagram</h3></a></li>
-      <li class="socialImg2"><a href="#"><img src="images/social_indeed.svg" alt="Indeed logo"><h3 class="hidden">Indeed</h3></a></li>
+      <li class="footSocialImg"><a href="#"><img src="images/social_twitter.svg" alt="twitter logo"><h3 class="hidden">Twitter</h3></a></li>
+      <li class="footSocialImg"><a href="#"><img src="images/social_instagram.svg" alt="Instagram logo"><h3 class="hidden">Instagram</h3></a></li>
+      <li class="footSocialImg2"><a href="#"><img src="images/social_indeed.svg" alt="Indeed logo"><h3 class="hidden">Indeed</h3></a></li>
     </ul>
    </footer>
    <!-- footer end -->
