--- a/4_portfolio.html
+++ b/4_portfolio.html
@@ -16,35 +16,65 @@
         <h2 class="hidden">Main Navigation</h2>
         <ul id="headNav">
           <li class="mainNavi logoPadding logoDesign"><a href="1_index.html"><img src="assets/apeiron_logo.svg" alt="Logo"><h3 class="hidden">Logo</h3></a></li>
-          <li class="mainNavi"><a href="1_index.html"><h3>Index</h3></a></li>
-          <li class="mainNavi"><a href="2_about.html"><h3>About</h3></a></li>
-          <li class="mainNavi"><a href="3_contact.html"><h3>Contact</h3></a></li>
-          <li class="mainNavi"><a href="#"><h3>Portfolio</h3></a></li>
+          <li class="mainNavi disNone"><a href="1_index.html"><h3>Home</h3></a></li>
+          <li class="mainNavi navi"><a href="2_about.html"><h3>About</h3></a></li>
+          <li class="mainNavi navi"><a href="3_contact.html"><h3>Contact</h3></a></li>
+          <li class="mainNavi navi"><a href="#"><h3>Portfolio</h3></a></li>
           <div id="headSocial">
             <li class="socialImg"><a href="#"><img src="images/social_twitter.svg" alt="twitter logo"><h3 class="hidden">Twitter</h3></a></li>
             <li class="socialImg"><a href="#"><img src="images/social_instagram.svg" alt="Instagram logo"><h3 class="hidden">Instagram</h3></a></li>
             <li class="socialImg2"><a href="#"><img src="images/social_indeed.svg" alt="Indeed logo"><h3 class="hidden">Indeed</h3></a></li>
           </div>
-          <li class="hidden"><a href="#"><img src="" alt="Hamburger Icon"><h3 class="hidden">Menu</h3></a></li>
+          <li class="mainNavi disNo hamBG"><a href="#"><img src="images/hamburger_icon.svg" alt="Hamburger Icon"><h3 class="hidden">Menu</h3></a></li>
         </ul>
       </nav>
     </header>
     <!-- header end -->
 
-
     <!-- hero start -->
-    <div id="homeImg"><img src=""></div>
+    <div id="heroImg">
+      <video autoplay muted loop>
+        <source src="assets/Apeiron-Promotional-Video.mp4" type="video/mp4">
+          Your browser does not support the video tag.
+      </video>
+    </div>
     <!-- hero end -->
+
     <div id="contents">
       <!--section 1 start -->
-    <section>
+    <section id="portfolio">
+      <h2>Portfolio</h2>
+      <p>Hi, We are Apeiron Inc. Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia, molestiae quas vel sint commodi repudiandae consequuntur voluptatum laborum numquam blanditiis harum quisquam eiussed odit fugiat iusto fuga praesentium optio, eaque rerum!<br><br>
+      
+      Here is our portfolio. Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia, molestiae quas vel sint commodi repudiandae consequuntur voluptatum laborum</p>
+      
+      <div id="portfolioSection">
+        <!--portfolio 1 start-->
+        <div class="work">
+        </div>
+        <!--portfolio 1 end-->
+        <!--portfolio 2 start-->
+        <div class="work">
+          <a href="5_portfolioFeatures.html"><img src="images/portfolio_img1.png" width="500px"></a>
+        </div>
+        <!--portfolio 2 end-->
+        <!--portfolio 3 start-->
+        <div class="work">
+          <img src="">
+        </div>
+        <!--portfolio 3 end-->
+        <!--portfolio 4 start-->
+        <div class="work">
+          <img src="">
+        </div>
+        <!--portfolio 4 end-->
+        <!--portfolio 5 start-->
+        <div class="work">
+        </div>
+        <!--portfolio 5 end-->
+      </div>
     </section>
     <!-- section1 end -->
-
-    <!-- section2 start -->
-    <section>
-    </section>
-    <!-- section2 end -->
     </div>
 
     <!-- footer start -->
