--- a/1_index.html
+++ b/1_index.html
@@ -16,24 +16,30 @@
         <h2 class="hidden">Main Navigation</h2>
         <ul id="headNav">
           <li class="mainNavi logoPadding logoDesign"><a href="1_index.html"><img src="assets/apeiron_logo.svg" alt="Logo"><h3 class="hidden">Logo</h3></a></li>
-          <li class="mainNavi"><a href="#"><h3>Index</h3></a></li>
-          <li class="mainNavi"><a href="2_about.html"><h3>About</h3></a></li>
-          <li class="mainNavi"><a href="3_contact.html"><h3>Contact</h3></a></li>
-          <li class="mainNavi"><a href="4_portfolio.html"><h3>Portfolio</h3></a></li>
+          <li class="mainNavi disNone"><a href="#"><h3>Home</h3></a></li>
+          <li class="mainNavi navi"><a href="2_about.html"><h3>About</h3></a></li>
+          <li class="mainNavi navi"><a href="3_contact.html"><h3>Contact</h3></a></li>
+          <li class="mainNavi navi"><a href="4_portfolio.html"><h3>Portfolio</h3></a></li>
           <div id="headSocial">
             <li class="socialImg"><a href="#"><img src="images/social_twitter.svg" alt="twitter logo"><h3 class="hidden">Twitter</h3></a></li>
             <li class="socialImg"><a href="#"><img src="images/social_instagram.svg" alt="Instagram logo"><h3 class="hidden">Instagram</h3></a></li>
             <li class="socialImg2"><a href="#"><img src="images/social_indeed.svg" alt="Indeed logo"><h3 class="hidden">Indeed</h3></a></li>
           </div>
-          <li class="hidden"><a href="#"><img src="" alt="Hamburger Icon"><h3 class="hidden">Menu</h3></a></li>
+          <li class="mainNavi disNo hamBG"><a href="#"><img src="images/hamburger_icon.svg" alt="Hamburger Icon"><h3 class="hidden">Menu</h3></a></li>
         </ul>
       </nav>
     </header>
     <!-- header end -->
 
     <!-- hero start -->
-    <div id="homeImg"><img src=""></div>
+    <div id="heroImg">
+      <video autoplay muted loop>
+        <source src="assets/Apeiron-Promotional-Video.mp4" type="video/mp4">
+          Your browser does not support the video tag.
+      </video>
+    </div>
     <!-- hero end -->
+
     <div id="contents">
       <!--section 1 start -->
       <section id="teamIntro">
@@ -50,7 +56,7 @@
             </div>
           </div>
           <div class="members">
-            <img src="">
+            <img src="images/doyeon1.jpg">
             <button id="Doyeon">Doyeon Kim</button>
             <div id="DoyeonDesc" class="hidden toggleDesc">
               <p class="employeeInfo">
@@ -79,13 +85,12 @@
         </div>
       </section>
       <!-- section1 end -->
-
-      <!-- section2 start -->
-      <section id="portfolio">
-        <h2>Portfolio</h2>
+    </div>
+    <!-- section2 start -->
+      <section id="indexPortfolio">
+        <h2><a href="4_portfolio.html">Portfolio</a></h2>
       </section>
       <!-- section2 end -->
-    </div>
 
     <!-- footer start -->
    <footer id="foot">
