--- a/5_portfolioFeatures.html
+++ b/5_portfolioFeatures.html
@@ -16,36 +16,36 @@
         <h2 class="hidden">Main Navigation</h2>
         <ul id="headNav">
           <li class="mainNavi logoPadding logoDesign"><a href="1_index.html"><img src="assets/apeiron_logo.svg" alt="Logo"><h3 class="hidden">Logo</h3></a></li>
-          <li class="mainNavi"><a href="#"><h3>Index</h3></a></li>
-          <li class="mainNavi"><a href="2_about.html"><h3>About</h3></a></li>
-          <li class="mainNavi"><a href="3_contact.html"><h3>Contact</h3></a></li>
-          <li class="mainNavi"><a href="4_portfolio.html"><h3>Portfolio</h3></a></li>
+          <li class="mainNavi disNone"><a href="#"><h3>Home</h3></a></li>
+          <li class="mainNavi navi"><a href="2_about.html"><h3>About</h3></a></li>
+          <li class="mainNavi navi"><a href="3_contact.html"><h3>Contact</h3></a></li>
+          <li class="mainNavi navi"><a href="4_portfolio.html"><h3>Portfolio</h3></a></li>
           <div id="headSocial">
             <li class="socialImg"><a href="#"><img src="images/social_twitter.svg" alt="twitter logo"><h3 class="hidden">Twitter</h3></a></li>
             <li class="socialImg"><a href="#"><img src="images/social_instagram.svg" alt="Instagram logo"><h3 class="hidden">Instagram</h3></a></li>
             <li class="socialImg2"><a href="#"><img src="images/social_indeed.svg" alt="Indeed logo"><h3 class="hidden">Indeed</h3></a></li>
           </div>
-          <li class="hidden"><a href="#"><img src="" alt="Hamburger Icon"><h3 class="hidden">Menu</h3></a></li>
+          <li class="mainNavi disNo hamBG"><a href="#"><img src="images/hamburger_icon.svg" alt="Hamburger Icon"><h3 class="hidden">Menu</h3></a></li>
         </ul>
       </nav>
     </header>
     <!-- header end -->
 
 
-    <!-- hero start -->
-    <div id="homeImg"><img src=""></div>
-    <!-- hero end -->
-    <div id="contents">
       <!--section 1 start -->
-    <section>
+    <section id="portfolioFeatures">
+      <div class="featureText">
+        <h2>Project 1</h2>
+        <p>This project is Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. <br><br> It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+      </div>
+      <div class="featureWork">
+        <video autoplay muted loop>
+          <source src="assets/dk_video.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+        </video>
+      </div>
     </section>
     <!-- section1 end -->
-
-    <!-- section2 start -->
-    <section>
-    </section>
-    <!-- section2 end -->
-    </div>
 
    <!-- footer start -->
    <footer id="foot">
