--- a/1_index.html
+++ b/1_index.html
@@ -2,31 +2,33 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title class="hidden"></title>
+<title class="hidden">Apeiron Index Page</title>
 <link rel="stylesheet" href="https://use.typekit.net/zwq2ock.css">
 <link href="css/reset.css" rel="stylesheet" type="text/css">
 <link href="css/main.css" rel="stylesheet" type="text/css">
 </head>
 <!--header start -->
 <body>
-    <h1 class="hidden"></h1>
+    <h1 class="hidden">Apeiron Index</h1>
     <a class="hidden" href="#content">Skip to content</a>
     <header>
       <nav id="head">
         <h2 class="hidden">Main Navigation</h2>
+        <div >
         <ul id="headNav">
           <li class="mainNavi logoPadding logoDesign"><a href="1_index.html"><img src="assets/apeiron_logo.svg" alt="Logo"><h3 class="hidden">Logo</h3></a></li>
           <li class="mainNavi disNone"><a href="#"><h3>Home</h3></a></li>
           <li class="mainNavi navi"><a href="2_about.html"><h3>About</h3></a></li>
           <li class="mainNavi navi"><a href="3_contact.html"><h3>Contact</h3></a></li>
           <li class="mainNavi navi"><a href="4_portfolio.html"><h3>Portfolio</h3></a></li>
-          <div id="headSocial">
-            <li class="socialImg"><a href="#"><img src="images/social_twitter.svg" alt="twitter logo"><h3 class="hidden">Twitter</h3></a></li>
-            <li class="socialImg"><a href="#"><img src="images/social_instagram.svg" alt="Instagram logo"><h3 class="hidden">Instagram</h3></a></li>
-            <li class="socialImg2"><a href="#"><img src="images/social_indeed.svg" alt="Indeed logo"><h3 class="hidden">Indeed</h3></a></li>
-          </div>
           <li class="mainNavi disNo hamBG"><a href="#"><img src="images/hamburger_icon.svg" alt="Hamburger Icon"><h3 class="hidden">Menu</h3></a></li>
         </ul>
+        <div id="headSocial">
+          <li class="socialImg"><a href="#"><img src="images/social_twitter.svg" alt="twitter logo"><h3 class="hidden">Twitter</h3></a></li>
+          <li class="socialImg"><a href="#"><img src="images/social_instagram.svg" alt="Instagram logo"><h3 class="hidden">Instagram</h3></a></li>
+          <li class="socialImg2"><a href="#"><img src="images/social_indeed.svg" alt="Indeed logo"><h3 class="hidden">Indeed</h3></a></li>
+        </div>
+      </div>
       </nav>
     </header>
     <!-- header end -->
@@ -47,7 +49,7 @@
         <!-- This is where the team members go -->
         <div id="team">
           <div class="members">
-            <img src="images/evan.jpg">
+            <img src="images/evan.jpg" alt="A photo of Evan">
             <button id="Evan">Evan Hansen</button>
             <div id="EvanDesc" class="hidden toggleDesc">
               <p class="employeeInfo">
@@ -56,7 +58,7 @@
             </div>
           </div>
           <div class="members">
-            <img src="images/doyeon1.jpg">
+            <img src="images/doyeon.jpg" alt="A photo of Doyeon">
             <button id="Doyeon">Doyeon Kim</button>
             <div id="DoyeonDesc" class="hidden toggleDesc">
               <p class="employeeInfo">
@@ -65,7 +67,7 @@
             </div>
           </div>
           <div class="members">
-            <img src="">
+            <img src="" alt="A photo of Carson">
             <button id="Carson">Carson Fitzgeorge</button>
             <div id="CarsonDesc" class="hidden toggleDesc">
               <p class="employeeInfo">
@@ -74,7 +76,7 @@
             </div>
           </div>
           <div class="members">
-            <img src="images/abram.jpg">
+            <img src="images/abram.jpg" alt="A photo of Abram">
             <button id="Abram">Abram Kouwen</button>
             <div id="AbramDesc" class="hidden toggleDesc">
               <p class="employeeInfo">
