--- a/2_about.html
+++ b/2_about.html
@@ -2,14 +2,14 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title class="hidden"></title>
+<title class="hidden">Apeiron - About</title>
 <link rel="stylesheet" href="https://use.typekit.net/zwq2ock.css">
 <link href="css/reset.css" rel="stylesheet" type="text/css">
 <link href="css/main.css" rel="stylesheet" type="text/css">
 </head>
 <!--header start -->
 <body>
-    <h1 class="hidden"></h1>
+    <h1 class="hidden">About</h1>
     <a class="hidden" href="#content">Skip to content</a>
     <header>
       <nav id="head">
@@ -20,13 +20,13 @@
           <li class="mainNavi navi"><a href="#"><h3>About</h3></a></li>
           <li class="mainNavi navi"><a href="3_contact.html"><h3>Contact</h3></a></li>
           <li class="mainNavi navi"><a href="4_portfolio.html"><h3>Portfolio</h3></a></li>
-          <div id="headSocial">
-            <li class="socialImg"><a href="#"><img src="images/social_twitter.svg" alt="twitter logo"><h3 class="hidden">Twitter</h3></a></li>
-            <li class="socialImg"><a href="#"><img src="images/social_instagram.svg" alt="Instagram logo"><h3 class="hidden">Instagram</h3></a></li>
-            <li class="socialImg2"><a href="#"><img src="images/social_indeed.svg" alt="Indeed logo"><h3 class="hidden">Indeed</h3></a></li>
-          </div>
           <li class="mainNavi disNo hamBG"><a href="#"><img src="images/hamburger_icon.svg" alt="Hamburger Icon"><h3 class="hidden">Menu</h3></a></li>
         </ul>
+        <div id="headSocial">
+          <li class="socialImg"><a href="#"><img src="images/social_twitter.svg" alt="twitter logo"><h3 class="hidden">Twitter</h3></a></li>
+          <li class="socialImg"><a href="#"><img src="images/social_instagram.svg" alt="Instagram logo"><h3 class="hidden">Instagram</h3></a></li>
+          <li class="socialImg2"><a href="#"><img src="images/social_indeed.svg" alt="Indeed logo"><h3 class="hidden">Indeed</h3></a></li>
+        </div>
       </nav>
     </header>
     <!-- header end -->
@@ -48,22 +48,22 @@
         </div>
         <div id="teamMembers">
           <div class="membersIntro">
-            <img src="images/evan.jpg">
+            <img src="images/evan.jpg" alt="A photo of Evan">
             <h3>Evan Hansen</h3>
             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
           </div>
           <div class="membersIntro">
-            <img src="images/doyeon1.jpg">
+            <img src="images/doyeon.jpg" alt="A photo of Doyeon">
             <h3>Doyeon Kim</h3>
             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
           </div>
           <div class="membersIntro">
-            <img src="">
+            <img src="" alt="A photo of Carson">
             <h3>Carson Fitzgeorge</h3>
             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
           </div>
           <div class="membersIntro">
-            <img src="">
+            <img src="" alt="A photo of Abram">
             <h3>Abram Kouwen</h3>
             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
           </div>
