--- a/4_portfolio.html
+++ b/4_portfolio.html
@@ -16,16 +16,16 @@
         <h2 class="hidden">Main Navigation</h2>
         <ul id="headNav">
           <li class="mainNavi logoPadding logoDesign"><a href="1_index.html"><img src="assets/apeiron_logo.svg" alt="Logo"><h3 class="hidden">Logo</h3></a></li>
-          <li class="mainNavi disNone"><a href="1_index.html"><h3>Home</h3></a></li>
+          <li class="mainNavi disNone"><a href="#"><h3>Home</h3></a></li>
           <li class="mainNavi navi"><a href="2_about.html"><h3>About</h3></a></li>
           <li class="mainNavi navi"><a href="3_contact.html"><h3>Contact</h3></a></li>
-          <li class="mainNavi navi"><a href="#"><h3>Portfolio</h3></a></li>
-          <div id="headSocial">
-            <li class="socialImg"><a href="#"><img src="images/social_twitter.svg" alt="twitter logo"><h3 class="hidden">Twitter</h3></a></li>
-            <li class="socialImg"><a href="#"><img src="images/social_instagram.svg" alt="Instagram logo"><h3 class="hidden">Instagram</h3></a></li>
-            <li class="socialImg2"><a href="#"><img src="images/social_indeed.svg" alt="Indeed logo"><h3 class="hidden">Indeed</h3></a></li>
-          </div>
+          <li class="mainNavi navi"><a href="4_portfolio.html"><h3>Portfolio</h3></a></li>
           <li class="mainNavi disNo hamBG"><a href="#"><img src="images/hamburger_icon.svg" alt="Hamburger Icon"><h3 class="hidden">Menu</h3></a></li>
+        </ul>
+        <ul id="headSocial">
+          <li class="socialImg"><a href="#"><img src="images/social_twitter.svg" alt="twitter logo"><h3 class="hidden">Twitter</h3></a></li>
+          <li class="socialImg"><a href="#"><img src="images/social_instagram.svg" alt="Instagram logo"><h3 class="hidden">Instagram</h3></a></li>
+          <li class="socialImg2"><a href="#"><img src="images/social_indeed.svg" alt="Indeed logo"><h3 class="hidden">Indeed</h3></a></li>
         </ul>
       </nav>
     </header>
