--- a/5_portfolioFeatures.html
+++ b/5_portfolioFeatures.html
@@ -20,12 +20,12 @@
           <li class="mainNavi navi"><a href="2_about.html"><h3>About</h3></a></li>
           <li class="mainNavi navi"><a href="3_contact.html"><h3>Contact</h3></a></li>
           <li class="mainNavi navi"><a href="4_portfolio.html"><h3>Portfolio</h3></a></li>
-          <div id="headSocial">
-            <li class="socialImg"><a href="#"><img src="images/social_twitter.svg" alt="twitter logo"><h3 class="hidden">Twitter</h3></a></li>
-            <li class="socialImg"><a href="#"><img src="images/social_instagram.svg" alt="Instagram logo"><h3 class="hidden">Instagram</h3></a></li>
-            <li class="socialImg2"><a href="#"><img src="images/social_indeed.svg" alt="Indeed logo"><h3 class="hidden">Indeed</h3></a></li>
-          </div>
           <li class="mainNavi disNo hamBG"><a href="#"><img src="images/hamburger_icon.svg" alt="Hamburger Icon"><h3 class="hidden">Menu</h3></a></li>
+        </ul>
+        <ul id="headSocial">
+          <li class="socialImg"><a href="#"><img src="images/social_twitter.svg" alt="twitter logo"><h3 class="hidden">Twitter</h3></a></li>
+          <li class="socialImg"><a href="#"><img src="images/social_instagram.svg" alt="Instagram logo"><h3 class="hidden">Instagram</h3></a></li>
+          <li class="socialImg2"><a href="#"><img src="images/social_indeed.svg" alt="Indeed logo"><h3 class="hidden">Indeed</h3></a></li>
         </ul>
       </nav>
     </header>
