Fixed my own JS cause it was bugged with multiple people. Fixed the video not playing

--- a/2_about.html
+++ b/2_about.html
@@ -16,7 +16,7 @@
         <h2 class="hidden">Main Navigation</h2>
         <ul id="headNav">
           <li class="mainNavi logoPadding logoDesign"><a href="1_index.html"><img src="assets/apeiron_logo.svg" alt="Logo"><h3 class="hidden">Logo</h3></a></li>
-          <li class="mainNavi disNone"><a href="#"><h3>Home</h3></a></li>
+          <li class="mainNavi disNone"><a href="1_index.html"><h3>Home</h3></a></li>
           <li class="mainNavi navi"><a href="2_about.html"><h3>About</h3></a></li>
           <li class="mainNavi navi"><a href="3_contact.html"><h3>Contact</h3></a></li>
           <li class="mainNavi navi"><a href="4_portfolio.html"><h3>Portfolio</h3></a></li>
@@ -34,7 +34,7 @@
     <!-- hero start -->
     <div id="heroImg">
       <video autoplay muted loop>
-        <source src="assets/Apeiron-Promotional-Video.mp4" type="video/mp4">
+        <source src="assets/apeiron_promo.mp4" type="video/mp4">
           Your browser does not support the video tag.
       </video>
     </div>
@@ -44,7 +44,7 @@
       <!--section 1 start -->
       <section id="introTeam">
         <div class="textCenter">
-          <h2>Meet the team</h2>
+          <h2>Meet The Team</h2>
         </div>
         <div id="teamMembers">
           <div class="membersIntro">
@@ -58,12 +58,12 @@
             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
           </div>
           <div class="membersIntro">
-            <img src="" alt="A photo of Carson">
+            <img src="images/carson.jpg" alt="A photo of Carson">
             <h3>Carson Fitzgeorge</h3>
             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
           </div>
           <div class="membersIntro">
-            <img src="" alt="A photo of Abram">
+            <img src="images/abram.jpg" alt="A photo of Abram">
             <h3>Abram Kouwen</h3>
             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
           </div>
