--- a/1_index.html
+++ b/1_index.html
@@ -34,7 +34,7 @@
     <!-- hero start -->
     <div id="heroImg">
       <video autoplay muted loop>
-        <source src="assets/Apeiron-Promotional-Video.mp4" type="video/mp4">
+        <source src="assets/apeiron_promo.mp4" type="video/mp4">
           Your browser does not support the video tag.
       </video>
     </div>
@@ -51,7 +51,6 @@
             <button id="Evan">Evan Hansen</button>
             <div id="EvanDesc" class="hidden toggleDesc">
               <p class="employeeInfo">
-                
               </p>
             </div>
           </div>
@@ -60,12 +59,11 @@
             <button id="Doyeon">Doyeon Kim</button>
             <div id="DoyeonDesc" class="hidden toggleDesc">
               <p class="employeeInfo">
-                
               </p>
             </div>
           </div>
           <div class="members">
-            <img src="" alt="A photo of Carson">
+            <img src="images/carson.jpg" alt="A photo of Carson">
             <button id="Carson">Carson Fitzgeorge</button>
             <div id="CarsonDesc" class="hidden toggleDesc">
               <p class="employeeInfo">
