--- a/4_portfolio.html
+++ b/4_portfolio.html
@@ -16,7 +16,7 @@
         <h2 class="hidden">Main Navigation</h2>
         <ul id="headNav">
           <li class="mainNavi logoPadding logoDesign"><a href="1_index.html"><img src="assets/apeiron_logo.svg" alt="Logo"><h3 class="hidden">Logo</h3></a></li>
-          <li class="mainNavi disNone"><a href="#"><h3>Home</h3></a></li>
+          <li class="mainNavi disNone"><a href="1_index.html"><h3>Home</h3></a></li>
           <li class="mainNavi navi"><a href="2_about.html"><h3>About</h3></a></li>
           <li class="mainNavi navi"><a href="3_contact.html"><h3>Contact</h3></a></li>
           <li class="mainNavi navi"><a href="4_portfolio.html"><h3>Portfolio</h3></a></li>
@@ -34,7 +34,7 @@
     <!-- hero start -->
     <div id="heroImg">
       <video autoplay muted loop>
-        <source src="assets/Apeiron-Promotional-Video.mp4" type="video/mp4">
+        <source src="assets/apeiron_promo.mp4" type="video/mp4">
           Your browser does not support the video tag.
       </video>
     </div>
