--- a/2_about.html
+++ b/2_about.html
@@ -44,27 +44,28 @@
       <!--section 1 start -->
       <section id="introTeam">
         <div class="textCenter">
-          <h2>Meet The Team</h2>
+          <h2>Apeiron</h2>
+          <p class="agencyIntro">Apeiron Inc. is an advertising agency founded in 2022 and baed in London, Ontario. Apeiron specializes in making the unknown known by working with unrecognized talent in eccentric and often overlooked disciplines. We show the world what the brilliant minds of tomorrow are up to today. Have a great idea you can't get off the ground? A niche product that you can't find your demographic for? We'll help you reach those who need to hear you the most. Join Apeiron and reach beyond the stars.</p>
         </div>
         <div id="teamMembers">
           <div class="membersIntro">
             <img src="images/evan.jpg" alt="A photo of Evan">
-            <h3>Evan Hansen</h3>
+            <h3>Evan Hansen <span class="deco"><h4><b>Chief Director</b></h4></span></h3>
             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
           </div>
           <div class="membersIntro">
             <img src="images/doyeon.jpg" alt="A photo of Doyeon">
-            <h3>Doyeon Kim</h3>
+            <h3>Doyeon Kim <span class="deco"><h4><b>Digital Director</b></h4></span></h3>
             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
           </div>
           <div class="membersIntro">
             <img src="images/carson.jpg" alt="A photo of Carson">
-            <h3>Carson Fitzgeorge</h3>
+            <h3>Carson Fitzgeorge <span class="deco"><h4><b></b></h4></span></h3>
             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
           </div>
           <div class="membersIntro">
             <img src="images/abram.jpg" alt="A photo of Abram">
-            <h3>Abram Kouwen</h3>
+            <h3>Abram Kouwen <span class="deco"><h4><b>Motion Graphics Designer</b></h4></span></h3>
             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
           </div>
         </div>
