--- a/4_portfolio.html
+++ b/4_portfolio.html
@@ -44,18 +44,22 @@
       <!--section 1 start -->
     <section id="portfolio">
       <h2>Portfolio</h2>
-      <p>Hi, We are Apeiron Inc. Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia, molestiae quas vel sint commodi repudiandae consequuntur voluptatum laborum numquam blanditiis harum quisquam eiussed odit fugiat iusto fuga praesentium optio, eaque rerum!<br><br>
-      
-      Here is our portfolio. Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia, molestiae quas vel sint commodi repudiandae consequuntur voluptatum laborum</p>
+      <p>Here is the portfolio of our team members. Our team is always trying to meet the needs of our clients. We are always communicating with our clients and working hard. We show the world what the brilliant minds of tomorrow are up to today. If you want to work with us, please contact us!</p>
       
       <div id="portfolioSection">
         <!--portfolio 1 start-->
         <div class="work">
+          <img src="images/dk_img1.gif">
         </div>
         <!--portfolio 1 end-->
         <!--portfolio 2 start-->
         <div class="work">
-          <a href="5_portfolioFeatures.html"><img src="images/portfolio_img1.png" width="500px"></a>
+          <a href="5_portfolioFeatures.html">
+            <video autoplay muted loop>
+              <source src="assets/dk_video.mp4" type="video/mp4">
+                Your browser does not support the video tag.
+            </video>
+          </a>
         </div>
         <!--portfolio 2 end-->
         <!--portfolio 3 start-->
@@ -65,7 +69,10 @@
         <!--portfolio 3 end-->
         <!--portfolio 4 start-->
         <div class="work">
-          <img src="">
+          <video autoplay muted loop>
+            <source src="assets/apeiron_promo.mp4" type="video/mp4">
+              Your browser does not support the video tag.
+          </video>
         </div>
         <!--portfolio 4 end-->
         <!--portfolio 5 start-->
