--- a/5_portfolioFeatures.html
+++ b/5_portfolioFeatures.html
@@ -35,8 +35,8 @@
       <!--section 1 start -->
     <section id="portfolioFeatures">
       <div class="featureText">
-        <h2>Project 1</h2>
-        <p>This project is Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. <br><br> It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+        <h2>Project 2</h2>
+        <p>This project is the beer promotion video. Put the logo and tagline in the promotion video. Tried to create consistent contents by bringing colors and logos from the beer company's website to the video. By frequently showing logos and taglines to consumers, the company's logo and phrases can be remembered well in consumers' memory. </p>
       </div>
       <div class="featureWork">
         <video autoplay muted loop>
