Fixed more bugs, added transition to buttons. Wrapping things up I think

--- a/5_portfolioFeatures.html
+++ b/5_portfolioFeatures.html
@@ -2,14 +2,14 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title class="hidden"></title>
+<title class="hidden">Apeiron - Portfolio Feature</title>
 <link rel="stylesheet" href="https://use.typekit.net/zwq2ock.css">
 <link href="css/reset.css" rel="stylesheet" type="text/css">
 <link href="css/main.css" rel="stylesheet" type="text/css">
 </head>
 <!--header start -->
 <body>
-    <h1 class="hidden"></h1>
+    <h1 class="hidden">Portfolio Feature</h1>
     <a class="hidden" href="#content">Skip to content</a>
     <header>
       <nav id="head">
