--- a/4_portfolio.html
+++ b/4_portfolio.html
@@ -2,14 +2,14 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title class="hidden"></title>
+<title class="hidden">Apeiron - Portfolio</title>
 <link rel="stylesheet" href="https://use.typekit.net/zwq2ock.css">
 <link href="css/reset.css" rel="stylesheet" type="text/css">
 <link href="css/main.css" rel="stylesheet" type="text/css">
 </head>
 <!--header start -->
 <body>
-    <h1 class="hidden"></h1>
+    <h1 class="hidden">Portfolio</h1>
     <a class="hidden" href="#content">Skip to content</a>
     <header>
       <nav id="head">
@@ -51,11 +51,12 @@
       <div id="portfolioSection">
         <!--portfolio 1 start-->
         <div class="work">
+          <img src="/images/portfolio_img3.jpg" alt="Tylen-Ale Bottle Label" width="500">
         </div>
         <!--portfolio 1 end-->
         <!--portfolio 2 start-->
         <div class="work">
-          <a href="5_portfolioFeatures.html"><img src="images/portfolio_img1.png" width="500px"></a>
+          <a href="5_portfolioFeatures.html"><img src="images/portfolio_img1.png" alt="A pic of Coola Beer" width="500"></a>
         </div>
         <!--portfolio 2 end-->
         <!--portfolio 3 start-->
