--- a/2_about.html
+++ b/2_about.html
@@ -61,7 +61,7 @@
           <div class="membersIntro">
             <img src="images/carson.jpg" alt="A photo of Carson">
             <h3>Carson Fitzgeorge <span class="deco"><h4><b></b></h4></span></h3>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+            <p>Carson Fitzgeorge is a 2D Graphics Artist and Wireframe Developer at Apeiron and excels when working with clients in need of website wireframes.</p>
           </div>
           <div class="membersIntro">
             <img src="images/abram.jpg" alt="A photo of Abram">
