final bug fixes from me, my work here is done

--- a/1_index.html
+++ b/1_index.html
@@ -48,7 +48,7 @@
         <div id="team">
           <div class="members">
             <img src="images/evan.jpg" alt="A photo of Evan">
-            <button id="Evan">Evan Hansen</button>
+            <button class="" id="Evan">Evan Hansen</button>
             <div id="EvanDesc" class="hidden toggleDesc">
               <p class="employeeInfo">
               </p>
@@ -56,7 +56,7 @@
           </div>
           <div class="members">
             <img src="images/doyeon.jpg" alt="A photo of Doyeon">
-            <button id="Doyeon">Doyeon Kim</button>
+            <button class="" id="Doyeon">Doyeon Kim</button>
             <div id="DoyeonDesc" class="hidden toggleDesc">
               <p class="employeeInfo">
               </p>
@@ -64,7 +64,7 @@
           </div>
           <div class="members">
             <img src="images/carson.jpg" alt="A photo of Carson">
-            <button id="Carson">Carson Fitzgeorge</button>
+            <button class="" id="Carson">Carson Fitzgeorge</button>
             <div id="CarsonDesc" class="hidden toggleDesc">
               <p class="employeeInfo">
                 
@@ -73,7 +73,7 @@
           </div>
           <div class="members">
             <img src="images/abram.jpg" alt="A photo of Abram">
-            <button id="Abram">Abram Kouwen</button>
+            <button class="" id="Abram">Abram Kouwen</button>
             <div id="AbramDesc" class="hidden toggleDesc">
               <p class="employeeInfo">
                 
