two more bugs I had to squash from the last merge. All good now

--- a/2_about.html
+++ b/2_about.html
@@ -51,7 +51,7 @@
           <div class="membersIntro">
             <img src="images/evan.jpg" alt="A photo of Evan">
             <h3>Evan Hansen <span class="deco"><h4><b>Chief Director</b></h4></span></h3>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+            <p>Evan is the creative director here at Apeiron. Founding the company in 2022, he stepped down in 2022 to pursue more involved projects with clients. He's driven by a sense of accomplishment that only comes from completing projects. Nothing is better to him that seeing a carefully made plan come to fruition. That being said, he doesn't always have the energy to make grand schemes so occationally he'll settle for going with the flow. An avid learner and a true troubleshooter, he makes sure he can sleep well at night knowing your job is done and was done well.</p>
           </div>
           <div class="membersIntro">
             <img src="images/doyeon.jpg" alt="A photo of Doyeon">
