--- a/4_portfolio.html
+++ b/4_portfolio.html
@@ -64,7 +64,7 @@
         <!--portfolio 2 end-->
         <!--portfolio 3 start-->
         <div class="work">
-          <img src="/images/portfolio_img3.jpg" alt="Tylen-Ale Bottle Label" width="500">
+          <img src="images/portfolio_img3.jpg" alt="Tylen-Ale Bottle Label" width="500">
         </div>
         <!--portfolio 3 end-->
         <!--portfolio 4 start-->
