--- a/2_about.html
+++ b/2_about.html
@@ -50,22 +50,22 @@
         <div id="teamMembers">
           <div class="membersIntro">
             <img src="images/evan.jpg" alt="A photo of Evan">
-            <h3>Evan Hansen <span class="deco"><h4><b>Chief Director</b></h4></span></h3>
+            <h3>Evan Hansen <br><span class="deco"><b>Chief Director</b></span></h3>
             <p>Evan is the creative director here at Apeiron. Founding the company in 2022, he stepped down in 2022 to pursue more involved projects with clients. He's driven by a sense of accomplishment that only comes from completing projects. Nothing is better to him that seeing a carefully made plan come to fruition. That being said, he doesn't always have the energy to make grand schemes so occationally he'll settle for going with the flow. An avid learner and a true troubleshooter, he makes sure he can sleep well at night knowing your job is done and was done well.</p>
           </div>
           <div class="membersIntro">
             <img src="images/doyeon.jpg" alt="A photo of Doyeon">
-            <h3>Doyeon Kim <span class="deco"><h4><b>Digital Director</b></h4></span></h3>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+            <h3>Doyeon Kim <br><span class="deco"><b>Digital Director</b></span></h3>
+            <p>Doyeon is Apeiron's web developer who has a design, development and digital contents' skills and knowledge. She always tries to meet our clients' need and communicate to them. Her experience studying at Fanshawe College is very helpful in carrying out her work in the industry. Her technical skills also include responsive front-end web design.</p>
           </div>
           <div class="membersIntro">
             <img src="images/carson.jpg" alt="A photo of Carson">
-            <h3>Carson Fitzgeorge <span class="deco"><h4><b></b></h4></span></h3>
+            <h3>Carson Fitzgeorge <br><span class="deco"><b>2D Graphics Artist</b></span></h3>
             <p>Carson Fitzgeorge is a 2D Graphics Artist and Wireframe Developer at Apeiron and excels when working with clients in need of website wireframes.</p>
           </div>
           <div class="membersIntro">
             <img src="images/abram.jpg" alt="A photo of Abram">
-            <h3>Abram Kouwen <span class="deco"><h4><b>Motion Graphics Designer</b></h4></span></h3>
+            <h3>Abram Kouwen <br><span class="deco"><b>Motion Graphics Designer</b></span></h3>
             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
           </div>
         </div>
