--- a/4_portfolio.html
+++ b/4_portfolio.html
@@ -49,7 +49,7 @@
       <div id="portfolioSection">
         <!--portfolio 1 start-->
         <div class="work">
-          <img src="images/dk_img1.gif">
+          <img src="images/dk_img1.gif" alt="Portfolio Images">
         </div>
         <!--portfolio 1 end-->
         <!--portfolio 2 start-->
@@ -64,7 +64,7 @@
         <!--portfolio 2 end-->
         <!--portfolio 3 start-->
         <div class="work">
-          <img src="images/portfolio_img3.jpg" alt="Tylen-Ale Bottle Label" width="500">
+          <img src="images/portfolio_img3.jpg" alt="Tylen-Ale Bottle Label">
         </div>
         <!--portfolio 3 end-->
         <!--portfolio 4 start-->
